--- a/app/src/main/res/layout-port/registration.xml
+++ b/app/src/main/res/layout-port/registration.xml
@@ -58,6 +58,14 @@
                 android:text="Female"
                 android:id="@+id/radio_female"/>
         </RadioGroup>
+
+        <Button android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:id="@+id/btn_save"
+            android:background="@color/colorPrimary"
+            android:text="SAVE"
+            android:textSize="20dp"
+            android:layout_marginTop="5dp"/>
     </LinearLayout>
 
 </ScrollView>
